--- a/index.html
+++ b/index.html
@@ -732,9 +732,9 @@
           <p class="footer-small">Where elegance meets royalty.</p>
         </div>
         <div class="social-links">
-          <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://www.tiktok.com/" target="_blank"><i class="fab fa-tiktok"></i></a>
-          <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/winfairfashion" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.tiktok.com/@winfairfashion0" target="_blank"><i class="fab fa-tiktok"></i></a>
+          <a href="https://www.facebook.com/winfairfashion" target="_blank"><i class="fab fa-facebook-f"></i></a>
         </div>
       </div>
       <p class="copyright">© 2026 WINFAIR FASHION – Port Harcourt. Crafted with elegance.</p>
