--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
         <div class="social-links">
           <a href="https://www.instagram.com/winfairfashion" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://www.tiktok.com/@winfairfashion0" target="_blank"><i class="fab fa-tiktok"></i></a>
-          <a href="https://www.facebook.com/winfairfashion" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/share/1A7YdePhhE/?mibextid=wwXIfr" target="_blank"><i class="fab fa-facebook-f"></i></a>
         </div>
       </div>
       <p class="copyright">© 2026 WINFAIR FASHION – Port Harcourt. Crafted with elegance.</p>
