--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
           <p class="footer-small">Where elegance meets royalty.</p>
         </div>
         <div class="social-links">
-          <a href="https://www.instagram.com/winfairfashion" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/_winfairfashion?igsh=MWt5cWZpdnFrZmd5Nw%3D%3D&utm_source=qr" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://www.tiktok.com/@winfairfashion0" target="_blank"><i class="fab fa-tiktok"></i></a>
           <a href="https://www.facebook.com/share/1A7YdePhhE/?mibextid=wwXIfr" target="_blank"><i class="fab fa-facebook-f"></i></a>
         </div>
